# pydoc-store-mulang

./: .dockerignore  .gitignore  Dockerfile  README.md  gh.Dockerfile  pyproject.toml
.github/workflows/: build-dkr-image.yml  build-executors.yml
backend/: pyproject.toml
executors/ClipEncoder/: Dockerfile.gpu  config.yml  executor.py  requirements.txt
executors/MilvusIndexer/: README.md  config.yml  executor.py  requirements.txt
milvus-compose/: docker-compose.yml
src/pydoc_store_mulang/mlpipeline/: app.py
src/pydoc_store_mulang/mlpipeline/executors/: clipencoder.py
src/rec/: document_store.py
