[tool.poetry]
name = "pydoc-store-mulang"
version = "0.0.1"
description = "Document database with natural language queries"
authors = ["sansmoraxz <souyamadebnath@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymilvus = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
