[tool.poetry]
name = "pydoc_store_mulang"
version = "0.0.1"
description = "Document database with natural language queries"
authors = ["sansmoraxz <souyamadebnath@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
docarray = {extras = ["milvus"], version = ">=0.21.0,<0.22.0"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
